fix: wrap message style

--- a/src/pages/error/Error.module.css
+++ b/src/pages/error/Error.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    align-content: space-between;
+   justify-content: center;
     gap: 20px;
     padding-inline: 20px;
     height: 100%;
@@ -14,7 +14,12 @@
 }
 
 .message {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     font-size: clamp(18px, 4vw, 36px);
+    white-space: nowrap;
 }
 
 .linkHome {
